--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "webpack-dev-server --config ./src/webpack.config.js --mode development --open",
+    "build": "webpack --config ./src/webpack.config.js --mode production",
+    "serve": "node_modules/.bin/http-server ./dist"
   },
   "repository": {
     "type": "git",
@@ -15,5 +18,29 @@
   "bugs": {
     "url": "https://github.com/lizamihalevich/Mohito/issues"
   },
-  "homepage": "https://github.com/lizamihalevich/Mohito#readme"
+  "homepage": "https://github.com/lizamihalevich/Mohito#readme",
+  "dependencies": {
+    "@babel/polyfill": "^7.4.4",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-hot-loader": "^4.12.9"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "@babel/preset-react": "^7.0.0",
+    "babel": "^6.23.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.0.6",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "css-loader": "^3.1.0",
+    "html-webpack-plugin": "^3.2.0",
+    "http-server": "^0.11.1",
+    "style-loader": "^0.23.1",
+    "webpack": "^4.0.0",
+    "webpack-cli": "^3.3.6",
+    "webpack-dev-server": "^3.7.2"
+  }
 }
