--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack-dev-server --config ./src/webpack.config.js --mode development --open",
     "build": "webpack --config ./src/webpack.config.js --mode production",
-    "serve": "node_modules/.bin/http-server ./dist"
+    "serve": "node_modules/.bin/http-server ./dist",
+    "eslint": "eslint --fix ./src"
   },
   "repository": {
     "type": "git",
