--- a/.eslintrc
+++ b/.eslintrc
@@ -10,6 +10,7 @@
     "react/prefer-stateless-function": [0],
     "react/jsx-indent": ["error", 4],
     "react/jsx-one-expression-per-line": 0,
+    "import/prefer-default-export": "off",
     "import/no-unresolved": [
       2,
       { "caseSensitive": false }
