--- a/package.json
+++ b/package.json
@@ -41,7 +41,11 @@
     "react-dom": "^16.8.6",
     "react-hot-loader": "^4.12.9",
     "react-proptypes": "^1.0.0",
-    "react-router-dom": "^5.0.1"
+    "react-redux": "^7.1.0",
+    "react-router-dom": "^5.0.1",
+    "react-router-redux": "^4.0.8",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
